Fixed no margin issue on smaller devices

--- a/src/Client/Shared/MainLayout.razor.css
+++ b/src/Client/Shared/MainLayout.razor.css
@@ -8,3 +8,7 @@
     z-index: -5;
 }
 
+/* Padding on narrow screens */
+main {
+    margin: var(--padding-md); 
+}
